[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/gut/gui/RunResults.gd" type="Script" id=1]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="RunResults" type="Control"]
margin_right = 595.0
margin_bottom = 459.0
rect_min_size = Vector2( 302, 0 )
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Toolbar" type="HBoxContainer" parent="VBox"]
margin_right = 296.0
margin_bottom = 24.0
size_flags_horizontal = 0

[node name="Expand" type="ToolButton" parent="VBox/Toolbar"]
margin_right = 28.0
margin_bottom = 24.0
hint_tooltip = "Expand selected item and all children."
icon = SubResource( 2 )

[node name="Collapse" type="ToolButton" parent="VBox/Toolbar"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 24.0
hint_tooltip = "Collapse selected item and all children."
icon = SubResource( 2 )

[node name="Sep" type="ColorRect" parent="VBox/Toolbar"]
margin_left = 64.0
margin_right = 66.0
margin_bottom = 24.0
rect_min_size = Vector2( 2, 0 )

[node name="LblAll" type="Label" parent="VBox/Toolbar"]
margin_left = 70.0
margin_top = 5.0
margin_right = 91.0
margin_bottom = 19.0
text = "All:"
align = 1

[node name="ExpandAll" type="ToolButton" parent="VBox/Toolbar"]
margin_left = 95.0
margin_right = 123.0
margin_bottom = 24.0
hint_tooltip = "Expand All."
icon = SubResource( 2 )

[node name="CollapseAll" type="ToolButton" parent="VBox/Toolbar"]
margin_left = 127.0
margin_right = 155.0
margin_bottom = 24.0
hint_tooltip = "Collapse all."
icon = SubResource( 2 )

[node name="Sep2" type="ColorRect" parent="VBox/Toolbar"]
margin_left = 159.0
margin_right = 161.0
margin_bottom = 24.0
rect_min_size = Vector2( 2, 0 )

[node name="HidePassing" type="CheckBox" parent="VBox/Toolbar"]
margin_left = 165.0
margin_right = 189.0
margin_bottom = 24.0
hint_tooltip = "Show/Hide passing tests.  Takes effect on next run."
size_flags_horizontal = 4
custom_icons/checked = SubResource( 2 )
custom_icons/unchecked = SubResource( 2 )
pressed = true
__meta__ = {
"_editor_description_": ""
}

[node name="Sep3" type="ColorRect" parent="VBox/Toolbar"]
margin_left = 193.0
margin_right = 195.0
margin_bottom = 24.0
rect_min_size = Vector2( 2, 0 )

[node name="LblSync" type="Label" parent="VBox/Toolbar"]
margin_left = 199.0
margin_top = 5.0
margin_right = 232.0
margin_bottom = 19.0
text = "Sync:"
align = 1

[node name="ShowScript" type="ToolButton" parent="VBox/Toolbar"]
margin_left = 236.0
margin_right = 264.0
margin_bottom = 24.0
hint_tooltip = "Open script and scroll to line when a tree item is clicked."
toggle_mode = true
pressed = true
icon = SubResource( 2 )

[node name="ScrollOutput" type="ToolButton" parent="VBox/Toolbar"]
margin_left = 268.0
margin_right = 296.0
margin_bottom = 24.0
hint_tooltip = "Scroll to related line in the output panel when tree item clicked."
toggle_mode = true
pressed = true
icon = SubResource( 2 )

[node name="Output" type="Panel" parent="VBox"]
self_modulate = Color( 1, 1, 1, 0.541176 )
margin_top = 28.0
margin_right = 595.0
margin_bottom = 459.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="VBox/Output"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Tree" type="Tree" parent="VBox/Output/Scroll"]
margin_right = 595.0
margin_bottom = 431.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
hide_root = true

[node name="OverlayMessage" type="Label" parent="VBox/Output"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="FontSampler" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
text = "000 of 000 passed"

[connection signal="pressed" from="VBox/Toolbar/Expand" to="." method="_on_Expand_pressed"]
[connection signal="pressed" from="VBox/Toolbar/Collapse" to="." method="_on_Collapse_pressed"]
[connection signal="pressed" from="VBox/Toolbar/ExpandAll" to="." method="_on_ExpandAll_pressed"]
[connection signal="pressed" from="VBox/Toolbar/CollapseAll" to="." method="_on_CollapseAll_pressed"]
[connection signal="pressed" from="VBox/Toolbar/HidePassing" to="." method="_on_Hide_Passing_pressed"]
[connection signal="item_activated" from="VBox/Output/Scroll/Tree" to="." method="_on_Tree_item_activated"]
[connection signal="item_selected" from="VBox/Output/Scroll/Tree" to="." method="_on_Tree_item_selected"]
